syntax = 'proto3';
package itd.data.protocol;


enum Identity {
    IDENTITY_CLIENT = 0;
    IDENTITY_SERVER = 1;
    IDENTITY_DATA_SERVER = 2;
    IDENTITY_PERSISTENCE = 3;
    IDENTITY_FUSION_ALGO = 4;
    IDENTITY_ROAD_CLEARANCE_MODULE = 5;
    IDENTITY_FUSION_ALGO_TIMEOUT_DETECTOR = 6;
    IDENTITY_EDGE_APPLICATION = 7;
    IDENTITY_VEHICLE = 8;
    IDENTITY_NOMADIC_DEVICE = 9;
    IDENTITY_PLANNING_MODULE = 10;
    IDENTITY_WARNING_MODULE = 11;
    IDENTITY_RESERVED = 12;
}
enum MessageMode {
    MESSAGE_MODE_RECEIVED = 0;
    MESSAGE_MODE_SENT = 1;
    MESSAGE_MODE_CONNECT = 2;
    MESSAGE_MODE_DISCONNECT = 3;
}
enum Action {
    ACTION_RECEIVED = 0;
    ACTION_SENT = 1;
    ACTION_CONNECT = 2;
    ACTION_DISCONNECT = 3;
    ACTION_DECODING_FAILED = 4;
    ACTION_CREATED = 5;
    ACTION_DECODING_SUCCEEDED = 6;
    ACTION_ENCODING_FAILED = 7;
    ACTION_ENCODING_SUCCEEDED = 8;
}
message TrackingEvent {
    uint64 timestamp = 1;
    uint32 submilli_nanos = 2;
    uint64 session_id = 3;
    string session_ip = 4;
    Identity session_identity = 5;
    Action action = 6;
}
message DataMessage {
    uint64 session_id = 1;
    string session_ip = 2;
    Identity session_identity = 3;
    MessageMode msg_mode = 4;
    uint64 timestamp = 5;
    bytes encoded_data = 6;
}
message TrackingInformation {
    uint64 timestamp = 1;
    uint32 protocol = 2;
    uint32 message_id = 3;
    bytes message_body = 4;
    repeated TrackingEvent events = 5;
}
message DataSupplement {
    uint64 session_id = 1;
    string session_ip = 2;
    Identity session_identity = 3;
    MessageMode msg_mode = 4;
    uint64 timestamp = 5;
    uint32 encoded_data_length = 6;
}
message MalformedMessage {
    uint64 session_id = 1;
    string session_ip = 2;
    Identity session_identity = 3;
    MessageMode msg_mode = 4;
    uint64 timestamp = 5;
    bytes encoded_data = 6;
}
message MalformedContent {
    bytes encoded_data = 1;
}
message Version {
    uint32 major = 1;
    uint32 minor = 2;
    uint32 patch = 3;
}
message BuildInfo {
    string git_hash = 1;
    string ci_platform = 2;
    string profile = 3;
    string time = 4;
    string compiler = 5;
}
message ApplicationInfo {
    Identity identity = 1;
    Version version = 2;
    BuildInfo build = 3;
    repeated string args = 4;
    string additional = 5;
}
